# X

./: .gitignore  LICENSE  README.md
.devin/skills/llm-council/: SKILL.md
admin/: index.html  package-lock.json  package.json
admin/src/: App.tsx  api.ts  styles.css
admin/src/pages/: BlockMap.tsx  Dashboard.tsx  Payments.tsx  Telemetry.tsx  Users.tsx
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/pro/xservis/client/: XservisApp.kt
android/app/src/main/java/pro/xservis/client/data/scan/: NetworkScanner.kt
android/app/src/main/java/pro/xservis/client/ui/: MainActivity.kt
android/app/src/main/java/pro/xservis/client/vpn/: XservisVpnService.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  splash_background.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
backend/: .env.example  README.md  pyproject.toml
backend/src/xservis_backend/: __init__.py  config.py  db.py  main.py  models.py  security.py
backend/src/xservis_backend/routes/: admin.py  auth.py  configs.py  health.py  payments.py  telemetry.py
backend/src/xservis_backend/services/: __init__.py  config_generator.py  geo.py
backend/src/xservis_backend/services/payments/: __init__.py  aaio.py  cryptocloud.py  lava.py
backend/tests/: test_app_smoke.py  test_config_generator.py
docs/: ARCHITECTURE.md  PRESENTATION.md
sql/: 001_init_schema.sql  002_migrate_legacy.sql
(+9 files in other folders)
