[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xservis-backend"
version = "0.1.0"
description = "xservis.pro backend — auth, telemetry, configs, payments, admin API"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "xservis.pro" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "aiomysql>=0.2",
    "asyncmy>=0.2.10",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "passlib[bcrypt]>=1.7",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "redis>=5.0",
    "qrcode[pil]>=7.4",
    "user-agents>=2.2",
    "geoip2>=4.8",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-passlib",
    "httpx>=0.27",
]

[project.scripts]
xservis-backend = "xservis_backend.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py311"
extend-exclude = ["alembic/versions/*"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "C4", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
